--- a/EmotionNet.ipynb
+++ b/EmotionNet.ipynb
@@ -550,6 +550,360 @@
    ]
   },
   {
+   "source": [
+    "### MLP model for Audio "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torch\n",
+    "from torch.autograd import Variable\n",
+    "import math\n",
+    "\n",
+    "class Classification_Net(nn.Module):\n",
+    "    def __init__(self, input_dims=3887):\n",
+    "        super(Classification_Net, self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_dims, 512)\n",
+    "        self.fc2 = nn.Linear(512, 128)\n",
+    "        self.fc3 = nn.Linear(128, 64)\n",
+    "        self.fc4 = nn.Linear(64, 8)\n",
+    "        self.dropout_2 = nn.Dropout(p=0.2)\n",
+    "        self.dropout_5 = nn.Dropout(p=0.5)\n",
+    "        self.relu = nn.ReLU()\n",
+    "\n",
+    "    def forward(self, feats):\n",
+    "        concat_vector = feats\n",
+    "        out1 = self.dropout_5(self.relu(self.fc1(concat_vector)))\n",
+    "        out2 = self.dropout_2(self.relu(self.fc2(out1)))\n",
+    "        out3 = self.dropout_2(self.relu(self.fc3(out2)))\n",
+    "        out4 = self.fc4(out3)\n",
+    "        return out4\n",
+    "\n",
+    "from torch.utils.data import *\n",
+    "\n",
+    "train_tensor_x = torch.Tensor(audio_train_x)\n",
+    "train_tensor_y = torch.Tensor(labs)\n",
+    "test_tensor_x = torch.Tensor(audio_test_x)\n",
+    "test_tensor_y = torch.Tensor(test_labs)\n",
+    "\n",
+    "train_dataset = TensorDataset(train_tensor_x, train_tensor_y)\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=128, shuffle=True, drop_last=True)\n",
+    "\n",
+    "test_dataset = TensorDataset(test_tensor_x, test_tensor_y)\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=64, shuffle=True, drop_last=True)\n",
+    "\n",
+    "model = Classification_Net()\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, 'max')\n",
+    "\n",
+    "losses = []\n",
+    "val_accs = []\n",
+    "train_accs = []\n",
+    "\n",
+    "for epoch in range(50):\n",
+    "      for itr, (x, y) in enumerate(train_dataloader):\n",
+    "      \n",
+    "        outputs = model(x)\n",
+    "        loss = criterion(outputs, y.long())\n",
+    "\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step() \n",
+    "\n",
+    "        if(itr%100 == 0):\n",
+    "          with torch.no_grad():\n",
+    "            train_correct = 0\n",
+    "            train_total = 0\n",
+    "            val_correct = 0\n",
+    "            val_total = 0\n",
+    "\n",
+    "            train_preds = []\n",
+    "            train_gts = []\n",
+    "            test_preds = []\n",
+    "            test_gts = []\n",
+    "\n",
+    "            for x, y in test_dataloader:\n",
+    "            \n",
+    "\n",
+    "              outputs = model(x)\n",
+    "\n",
+    "              _, predicted = torch.max(outputs.data, 1)\n",
+    "              val_total += y.size(0)\n",
+    "              val_correct += (predicted == y.long()).sum().item()\n",
+    "\n",
+    "              test_preds += list(predicted.cpu().detach().numpy())\n",
+    "              test_gts += list(y.cpu().detach().numpy())\n",
+    "\n",
+    "            for i, (x, y) in enumerate(train_dataloader):\n",
+    "              if(i == 50):\n",
+    "                break\n",
+    "            \n",
+    "\n",
+    "              outputs = model(x)\n",
+    "\n",
+    "              _, predicted = torch.max(outputs.data, 1)\n",
+    "              train_total += y.size(0)\n",
+    "              train_correct += (predicted == y.long()).sum().item()\n",
+    "\n",
+    "              train_preds += list(predicted.cpu().detach().numpy())\n",
+    "              train_gts += list(y.cpu().detach().numpy())              \n",
+    "              \n",
+    "            train_precision = precision_score(train_gts, train_preds, average='micro')\n",
+    "            train_recall = recall_score(train_gts, train_preds, average='micro')\n",
+    "            test_precision = precision_score(test_gts, test_preds, average='micro')\n",
+    "            test_recall = recall_score(test_gts, test_preds, average='micro')\n",
+    "\n",
+    "            print('Epoch: '+str(epoch)+', Itr: '+str(itr)+', Loss: '+str(loss.item())+', Val acc: '+str(100 * val_correct/val_total)+', Train acc: '+str(100 * train_correct/train_total))\n",
+    "            print('TrainP: '+str(train_precision)+', TrainR: '+str(train_recall)+', TestP: '+str(test_precision)+', TestR: '+str(test_recall))\n",
+    "            losses.append(loss.item())\n",
+    "            val_accs.append(100 * val_correct/val_total)\n",
+    "            train_accs.append(100 * train_correct/train_total)\n",
+    "plt.figure()\n",
+    "plt.plot(losses)\n",
+    "plt.title('Losses vs Epochs')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Training loss')\n",
+    "plt.savefig('unimodal_audio_loss.png')\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(val_accs, label='Test')\n",
+    "plt.plot(train_accs, label='Train')\n",
+    "plt.title('Accuracies vs Epochs')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Accuracies')\n",
+    "plt.legend(loc='best')\n",
+    "plt.savefig('unimodal_audio_acc.png')"
+   ]
+  },
+  {
+   "source": [
+    "## Trying out ML algorithms for emotion prediction purely on the basis of image features"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#assigning new variables to audio train and test data\n",
+    "train_x = img_train_x\n",
+    "test_x = img_test_x\n",
+    "\n",
+    "# assigning new variables to labels\n",
+    "labs = img_train_y\n",
+    "test_labs = img_test_y\n",
+    "\n",
+    "# Using SVM for predicting emotion based on only image features\n",
+    "svm = SVC(gamma='auto')\n",
+    "svm.fit(train_x, labs)\n",
+    "\n",
+    "print(\"SVM Train Accuracy: \",accuracy_score(labs, svm.predict(train_x)))\n",
+    "print(\"SVM Test Accuracy: \",accuracy_score(test_labs, svm.predict(test_x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using Logistic Regression for predicting emotion based on only image features\n",
+    "log_reg = LogisticRegression(max_iter=1000)\n",
+    "log_reg.fit(train_x, labs)\n",
+    "\n",
+    "print(\"Logistic Regression Train Accuracy: \",accuracy_score(labs, log_reg.predict(train_x)))\n",
+    "print(\"Logistic Regression Test Accuracy: \",accuracy_score(test_labs, log_reg.predict(test_x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using Decision Tree for predicting emotion based on only image features\n",
+    "dt = tree.DecisionTreeClassifier()\n",
+    "dt.fit(train_x, labs)\n",
+    "\n",
+    "print(\"Decision Tree Train Accuracy: \",accuracy_score(labs, dt.predict(train_x)))\n",
+    "print(\"Decision Tree Test Accuracy: \",accuracy_score(test_labs, dt.predict(test_x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using Random Forest for predicting emotion based on only image features\n",
+    "rf = RandomForestClassifier()\n",
+    "rf.fit(train_x, labs)\n",
+    "\n",
+    "print(\"Random Forest Train Accuracy: \",accuracy_score(labs, rf.predict(train_x)))\n",
+    "print(\"Random Forest Test Accuracy: \",accuracy_score(test_labs, rf.predict(test_x)))"
+   ]
+  },
+  {
+   "source": [
+    "### MLP model for image "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torch\n",
+    "from torch.autograd import Variable\n",
+    "import math\n",
+    "\n",
+    "class Classification_Net(nn.Module):\n",
+    "    def __init__(self, input_dims=8192):\n",
+    "        super(Classification_Net, self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_dims, 512)\n",
+    "        self.fc2 = nn.Linear(512, 128)\n",
+    "        self.fc3 = nn.Linear(128, 64)\n",
+    "        self.fc4 = nn.Linear(64, 8)\n",
+    "        self.dropout_2 = nn.Dropout(p=0.2)\n",
+    "        self.dropout_5 = nn.Dropout(p=0.5)\n",
+    "        self.relu = nn.ReLU()\n",
+    "\n",
+    "    def forward(self, feats):\n",
+    "        concat_vector = feats\n",
+    "        out1 = self.dropout_5(self.relu(self.fc1(concat_vector)))\n",
+    "        out2 = self.dropout_2(self.relu(self.fc2(out1)))\n",
+    "        out3 = self.dropout_2(self.relu(self.fc3(out2)))\n",
+    "        out4 = self.fc4(out3)\n",
+    "        return out4\n",
+    "\n",
+    "from torch.utils.data import *\n",
+    "\n",
+    "train_tensor_x = torch.Tensor(img_train_x)\n",
+    "train_tensor_y = torch.Tensor(img_train_y)\n",
+    "test_tensor_x = torch.Tensor(img_test_x)\n",
+    "test_tensor_y = torch.Tensor(img_test_y)\n",
+    "\n",
+    "print(train_tensor_x.shape, train_tensor_y.shape, test_tensor_x.shape, test_tensor_y.shape)\n",
+    "\n",
+    "train_dataset = TensorDataset(train_tensor_x, train_tensor_y)\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=128, shuffle=True, drop_last=True)\n",
+    "\n",
+    "test_dataset = TensorDataset(test_tensor_x, test_tensor_y)\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=64, shuffle=True, drop_last=True)\n",
+    "\n",
+    "model = Classification_Net()\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, 'max')\n",
+    "\n",
+    "\n",
+    "losses = []\n",
+    "val_accs = []\n",
+    "train_accs = []\n",
+    "\n",
+    "for epoch in range(50):\n",
+    "      for itr, (x, y) in enumerate(train_dataloader):\n",
+    "        outputs = model(x)\n",
+    "        loss = criterion(outputs, y.long())\n",
+    "\n",
+    "      \n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step() \n",
+    "\n",
+    "        if(itr%100 == 0):\n",
+    "          with torch.no_grad():\n",
+    "            train_correct = 0\n",
+    "            train_total = 0\n",
+    "            val_correct = 0\n",
+    "            val_total = 0\n",
+    "\n",
+    "            train_preds = []\n",
+    "            train_gts = []\n",
+    "            test_preds = []\n",
+    "            test_gts = []            \n",
+    "\n",
+    "            for x, y in test_dataloader:\n",
+    "              \n",
+    "              outputs = model(x)\n",
+    "\n",
+    "              _, predicted = torch.max(outputs.data, 1)\n",
+    "              val_total += y.size(0)\n",
+    "              val_correct += (predicted == y.long()).sum().item()\n",
+    "\n",
+    "              test_gts += list(y.cpu().detach().numpy())\n",
+    "              test_preds += list(predicted.cpu().detach().numpy())              \n",
+    "\n",
+    "            for i, (x, y) in enumerate(train_dataloader):\n",
+    "              if(i == 50):\n",
+    "                break\n",
+    "              \n",
+    "\n",
+    "              outputs = model(x)\n",
+    "\n",
+    "              _, predicted = torch.max(outputs.data, 1)\n",
+    "              train_total += y.size(0)\n",
+    "              train_correct += (predicted == y.long()).sum().item()\n",
+    "\n",
+    "              train_gts += list(y.cpu().detach().numpy())\n",
+    "              train_preds += list(predicted.cpu().detach().numpy())\n",
+    "\n",
+    "            train_precision = precision_score(train_gts, train_preds, average='micro')\n",
+    "            train_recall = recall_score(train_gts, train_preds, average='micro')\n",
+    "            test_precision = precision_score(test_gts, test_preds, average='micro')\n",
+    "            test_recall = recall_score(test_gts, test_preds, average='micro')\n",
+    "\n",
+    "            print('Epoch: '+str(epoch)+', Itr: '+str(itr)+', Loss: '+str(loss.item())+', Val acc: '+str(100 * val_correct/val_total)+', Train acc: '+str(100 * train_correct/train_total))\n",
+    "            print('TrainP: '+str(train_precision)+', TrainR: '+str(train_recall)+', TestP: '+str(test_precision)+', TestR: '+str(test_recall))              \n",
+    "            losses.append(loss.item())\n",
+    "            val_accs.append(100 * val_correct/val_total)\n",
+    "            train_accs.append(100 * train_correct/train_total)\n",
+    "#           \n",
+    "torch.save(model.state_dict(), 'model_concat_16384_dimensional.ckpt')\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(losses)\n",
+    "plt.title('Losses vs Epochs')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Training loss')\n",
+    "plt.savefig('unimodal_img_loss.png')\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(val_accs, label='Test')\n",
+    "plt.plot(train_accs, label='Train')\n",
+    "plt.title('Accuracies vs Epochs')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Accuracies')\n",
+    "plt.legend(loc='best')\n",
+    "plt.savefig('unimodal_img_acc.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1277,7 +1631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7-final"
   }
  },
  "nbformat": 4,
